--- a/Todo_List/templates/tasks_pdf.html
+++ b/Todo_List/templates/tasks_pdf.html
@@ -1,47 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Task Report</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 14px;
         }
+        
         h1 {
             text-align: center;
         }
+        
         table {
             border-collapse: collapse;
             width: 100%;
+            table-layout: fixed;
         }
+        
         th, td {
             text-align: left;
             padding: 8px;
+            word-wrap: break-word;
+            overflow: hidden;
         }
+        
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+        
         .total-task {
             text-align: center;
             font-size: 20px;
             font-weight: bold;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
         }
     </style>
 </head>
 <body>
     <h1>Task Report of || {{ user.username }} ||</h1>
     {% if profile_picture_base64 %}
-    <div class="row">
-        <div class = "column">
-            <img src="data:image/png;base64,{{ profile_picture_base64 }}" class="avatar" alt="Avater"style="border-radius:50%;">
-        </div>
-        <div class="column">
+        <div class="profile-section">
+            <img src="data:image/png;base64,{{ profile_picture_base64 }}" alt="Profile Picture">
+        
             <p><strong>Username:</strong> {{ user.username }}</p>
             <p><strong>Full Name:</strong> {{ user.first_name }} {{ user.last_name }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
@@ -56,7 +60,6 @@
                 <p><strong>Address:</strong> Not Available</p>
             {% endif %}
         </div>
-    </div>
     {% endif %}
     <div>
         <p class ="total-task"><strong>Total Tasks: {{ tasks|length }}</strong></p>
@@ -68,7 +71,6 @@
                 <th scope="col">Category</th>
                 <th scope="col">Created Date</th>
                 <th scope="col">Due Date / Completed Date</th>
-                <th scope="col">Priority</th>
                 <th scope="col">Status</th>
             </tr>
         </thead>
@@ -79,14 +81,20 @@
                 <td>{{ task.category.name }}</td>
                 <td>{{ task.createdDate | date:"d /m /y- h:i A" }}</td>
                 <td>
-                    {% if task.completed %}
+                    {% if task.status == 'Completed' %}
                     {{ task.completedDate | date:"d /m /y- h:i A" }}
                     {% else %}
                     {{ task.dueDate | date:"d /m /y- h:i A" }}
                     {% endif %}
                 </td>
-                <td>{% if task.important %}Important{% else %}Not Important{% endif %}</td>
-                <td>{% if task.completed %}Completed{% else %}Pending{% endif %}</td>
+                <td>{% if task.status == 'Completed' %}
+                        Completed
+                    {% elif task.status == 'Pending' %}
+                        Pending
+                    {% elif task.status == 'Overdue' %}
+                        Overdue
+                    {% endif %}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
