--- a/Todo_List/templates/profile.html
+++ b/Todo_List/templates/profile.html
@@ -8,12 +8,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <style>
+        .fa-eye-slash {
+            color: #999;
+            cursor: pointer;
+        }
+        .fa-eye-slash:hover {
+            color: #666;
+        }
+        .input-group i {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    </style>
 </head>
 <body>
     {% include 'base.html' %}
     <div class="profile-section">
         <div class="profile-picture">
-            <img src="{{ user.profile.profile_picture.url }}" class="rounded-circle" width="200" height="200" alt="Profile Picture">
+            <img src="{{ user.profile.profile_picture.url }}" class="rounded-circle" width="250" height="250" alt="Profile Picture">
         </div>
         <div class="profile-details">
             <h3 class="username">{{ user.username }}</h3>
@@ -71,9 +87,10 @@
                 </select>
             </div>
             <div id="password_fields" style="display: none;">
-                <div class="mb-3">
+                <div class="mb-3 input-group">
                     <label for="id_old_password" class="form-label">Old Password:</label>
                     <input type="password" class="form-control" name="old_password" id="id_old_password">
+                    <i class="fa fa-eye toggle-password" id="eye_old_password"></i>
                     {% if password_form.old_password.errors %}
                         <div class="errors">
                             {% for error in password_form.old_password.errors %}
@@ -82,9 +99,10 @@
                         </div>
                     {% endif %}
                 </div>
-                <div class="mb-3">
+                <div class="mb-3 input-group">
                     <label for="id_new_password1" class="form-label">New Password:</label>
                     <input type="password" class="form-control" name="new_password1" id="id_new_password1">
+                    <i class="fa fa-eye toggle-password" id="eye_new_password1"></i>
                     {% if password_form.new_password1.errors %}
                         <div class="errors">
                             {% for error in password_form.new_password1.errors %}
@@ -93,9 +111,10 @@
                         </div>
                     {% endif %}
                 </div>
-                <div class="mb-3">
+                <div class="mb-3 input-group">
                     <label for="id_new_password2" class="form-label">Confirm New Password:</label>
                     <input type="password" class="form-control" name="new_password2" id="id_new_password2">
+                    <i class="fa fa-eye toggle-password" id="eye_new_password2"></i>
                     {% if password_form.new_password2.errors %}
                         <div class="errors">
                             {% for error in password_form.new_password2.errors %}
@@ -105,6 +124,7 @@
                     {% endif %}
                 </div>
             </div>
+            
             <button type="submit" class="btn btn-primary btn-add" style = "background-color:#0DBEF3;">Save</button>
         </form>
         <br>
@@ -168,5 +188,38 @@
             });
         });
     </script>
+    <script>
+        const eyeOldPassword = document.getElementById('eye_old_password');
+        const oldPassword = document.querySelector('input[name="old_password"]');
+        
+        const eyeNewPassword1 = document.getElementById('eye_new_password1');
+        const newPassword1 = document.querySelector('input[name="new_password1"]');
+        
+        const eyeNewPassword2 = document.getElementById('eye_new_password2');
+        const newPassword2 = document.querySelector('input[name="new_password2"]');
+        
+        const togglePassword = (eye, password) => {
+            if (password.type === 'password') {
+                password.type = 'text';
+                eye.classList.add('fa-eye-slash');
+            } else {
+                password.type = 'password';
+                eye.classList.remove('fa-eye-slash');
+            }
+        };
+    
+        eyeOldPassword.addEventListener('click', () => {
+            togglePassword(eyeOldPassword, oldPassword);
+        });
+    
+        eyeNewPassword1.addEventListener('click', () => {
+            togglePassword(eyeNewPassword1, newPassword1);
+        });
+    
+        eyeNewPassword2.addEventListener('click', () => {
+            togglePassword(eyeNewPassword2, newPassword2);
+        });
+    </script>
+    
 </body>
 </html>
