--- a/Todo_List/templates/Sign_in.html
+++ b/Todo_List/templates/Sign_in.html
@@ -1,11 +1,11 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <style>
         body {
             background-color: #000;
@@ -16,25 +16,40 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 80vh;
         }
         .form {
             background-color: #fff;
             color: #000;
             padding: 30px;
             border-radius: 10px;
-            max-width: 400px;
+            max-width: 600px;
             text-align: center;
         }
         input[type="text"],
         input[type="password"] {
             width: 100%;
             padding: 10px;
+            margin-left:-10px;
             margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
             outline: none;
         }
+
+        .input-group {
+            position: relative;
+        }
+
+        .input-group i {
+            position: absolute;
+            right: -5px;
+            top: 35%;
+            down: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+        
         input[type="submit"] {
             background-color: #000;
             color: #fff;
@@ -43,11 +58,11 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .signup_link {
+        .signup-link {
             color: black;
             text-decoration: none;
         }
-        .signup_link:hover {
+        .signup-link:hover {
             text-decoration: underline;
         }
         .alert-box {
@@ -73,13 +88,20 @@
         <form class="form" method="post" action="{% url 'signin' %}">
             {% csrf_token %}
             <h2>Login</h2>
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="checkbox" name="remember_me" id="remember_me">
-            <label for="remember-me" align="right">Remember me</label><br>
-            <input type="submit" value="Login">
-            <p>Don't have an account? <a href="{% url 'signup' %}"><b>Sign up</b></a></p>
-            <p><a href="{% url 'forgot_password' %}" class="link">Forgot password?</a></p>
+            <div class="input-group">
+                <input type="text" name="username" placeholder="Username"style="margin-bottom:17px;" required>
+            </div>
+            <div class="input-group">
+                <input type="password" name="password" placeholder="Password"style="margin-bottom:20px;" required>
+                <i class="fa fa-eye" id="eye"></i>
+            </div>
+            <div class="remember-forgot">
+                <input type="checkbox" name="remember_me" id="remember_me"style="margin-left:-5px;">
+                <label for="remember_me"style="margin-right:100px;">Remember me</label>
+                <a href="{% url 'forgot_password' %}" class="forgot-link"style="color:blue;">Forgot password?</a><br>
+            </div><br>
+            <input type="submit" value="Login"style="margin-bottom:15px;">
+            <br>Don't have an account?<p class = "signup-link"><a href="{% url 'signup' %}"style="color:blue;"><b>Sign up</b></a></p>
             {% if messages %}
                 <div class="text-center mt-3">
                     {% for message in messages %}
@@ -91,5 +113,18 @@
             {% endif %}
         </form>
     </div>
+    <script>
+        const eye = document.getElementById('eye');
+        const password = document.querySelector('input[name="password"]');
+        eye.addEventListener('click', () => {
+            if (password.type === 'password') {
+                password.type = 'text';
+                eye.classList.add('fa-eye-slash');
+            } else {
+                password.type = 'password';
+                eye.classList.remove('fa-eye-slash');
+            }
+        });
+    </script>
 </body>
 </html>
