--- a/Todo_List/templates/all_categories.html
+++ b/Todo_List/templates/all_categories.html
@@ -40,10 +40,10 @@
                         </thead>
                         <tbody>
                             {% for task in category.tasks.all|dictsortreversed:"important" %}
-                            <tr>
+                            <tr class="task-row" data-toggle="modal" data-target="#taskModal{{ task.id }}">
                                 <td>{{ task.taskTitle }}</td>
                                 <td>{{ task.createdDate |date:'d - m - y | h:i A' }}</td>
-                                <td>
+                                <td {% if task.status == 'Completed' %} title="Completed Date" {% else %} title="Due Date" {% endif %}>
                                     {% if task.status == 'Completed' %}
                                         {{ task.completedDate|date:'d - m - Y | H:i A' }}
                                     {% elif task.status == 'Pending' %}
@@ -51,18 +51,48 @@
                                     {% elif task.status == 'Overdue' %}
                                         {{ task.dueDate|date:'d - m - Y | H:i A' }}
                                     {% endif %}
-                                </td>
+                                </td>                                
                                 <td>{% if task.important %}Important{% else %}Not Important{% endif %}</td>
-                                <td>
-                                    {% if task.status == 'Completed' %}
-                                        Completed
-                                    {% elif task.status == 'Pending' %}
-                                        Pending
-                                    {% elif task.status == 'Overdue' %}
-                                        Overdue
-                                    {% endif %}
-                                </td>
+                                <td>{{ task.status }}</td>
                             </tr>
+                            <div class="modal fade task-modal" id="taskModal{{ task.id }}" tabindex="-1" aria-labelledby="taskModal{{ task.id }}" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered overflow-hidden">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="taskModal{{ task.id }}">{{ task.taskTitle }}</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body text-start">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <p class="field-name">Created Date</p>
+                                                    <p class="field">{{ task.createdDate|date:'d/m/Y | h:i A' }}</p>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p class="field-name">Due Date</p>
+                                                    <p class="field">{{ task.dueDate|date:'d/m/Y | h:i A' }}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <p class="field-name">Category</p>
+                                                    <p class="field">{{ task.category }}</p>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p class="field-name">Status</p>
+                                                    <p class="field">{{ task.status }}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <p class="field-name">Description</p>
+                                                    <p class="field">{{ task.description|linebreaksbr|safe }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             {% empty %}
                             <tr>
                                 <td colspan="5"align="center"><h5>No tasks available for this category.</h5></td>
@@ -90,6 +120,21 @@
             $(this).toggleClass('collapsed');
             var target = $(this).data('target');
             $(target).collapse('toggle');
+        });
+    });
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $(".task-row").click(function(e) {
+            e.preventDefault();
+            $(".modal").modal("hide");
+            var modalId = $(this).attr("data-target");
+            $(modalId).modal("show");
+        });
+        $(".modal .close").click(function() {
+            $(this).closest(".modal").modal("hide");
         });
     });
 </script>
