--- a/Todo_List/templates/tasks.html
+++ b/Todo_List/templates/tasks.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         .pagination {
             display: flex;
@@ -66,58 +68,93 @@
     </div>
     {% endif %}
     {% if tasks %}
-        <table class="table table-hover"border="1">
+        <table class="table table-hover" border="1">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">Title</th>
                     <th scope="col">Category</th>
                     <th scope="col">Due Date</th>
+                    <th scope="col">Priority</th>
                     <th scope="col">Status</th>
                     <th scope="col" colspan="3" class="action-column">Action</th>
                 </tr>
             </thead>
             <tbody>
-                {% for task in tasks %}
-                <tr>
-                    <td>{{ task.taskTitle }}</td>
-                    <td>{{ task.category.name }}</td>
-                    <td>{{ task.dueDate|date:'d - m - y | h:i A' }}</td>
-                    <td>
+            {% for task in tasks %}
+            <tr class="task-row" data-toggle="modal" data-target="#taskModal{{ task.id }}">
+                <td>{{ task.taskTitle }}</td>
+                <td>{{ task.category.name }}</td>
+                <td>{{ task.dueDate|date:'d - m - y | h:i A' }}</td>
+                <td>{% if task.important %}Important{% else %}Not Important{% endif %}</td>
+                <td>{{ task.status }}</td>
+                <td align="center">
+                    <div class="btn-group" role="group" aria-label="Task Actions">
                         {% if task.task_status == 'Overdue' %}
-                            Overdue
+                        <a href="{% url 'edit_task' task.id %}" class="btn btn-warning" style="margin-right:20px;border-radius:10px;" title="Restart">
+                            <i class="fas fa-sync-alt"></i>
+                        </a>
                         {% else %}
-                            Pending
+                        <a href="{% url 'edit_task' task.id %}" class="btn btn-primary btn-edit" style="margin-right: 20px; border-radius: 10px;" title="Edit">
+                            <i class="fas fa-edit"></i>
+                        </a>
                         {% endif %}
-                    </td>
-                    <td align="center">
-                        <div class="btn-group" role="group" aria-label="Task Actions">
-                            {% if task.task_status == 'Overdue' %}
-                            <a href="{% url 'edit_task' task.id %}" class="btn btn-warning"style="margin-right:20px;border-radius:10px;" title="Restart">
-                                <i class="fas fa-sync-alt"></i>
-                            </a>
-                            {% else %}
-                            <a href="{% url 'edit_task' task.id %}" class="btn btn-primary btn-edit" style="margin-right: 20px; border-radius: 10px;"title="Edit">
-                                <i class="fas fa-edit"></i>
-                            </a>
-                            {% endif %}
-                            <form method="POST" action="{% url 'delete_task' task.id %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-danger" style="margin-right: 20px;border-radius:10px;"title="Delete">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </form>
-                            <form method="post" action="{% url 'mark_task_completed' task.id %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-success"title="Mark As Completed"style="border-radius:10px;">
-                                    <i class="fas fa-check"></i>
-                                </button>
-                            </form>
+                        <form method="POST" action="{% url 'delete_task' task.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger" style="margin-right: 20px;border-radius:10px;" title="Delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </form>
+                        <form method="post" action="{% url 'mark_task_completed' task.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-success" title="Mark As Completed" style="border-radius:10px;">
+                                <i class="fas fa-check"></i>
+                            </button>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+                <div class="modal fade task-modal" id="taskModal{{ task.id }}" tabindex="-1" aria-labelledby="taskModal{{ task.id }}" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered overflow-hidden">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="taskModal{{ task.id }}">{{ task.taskTitle }}</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            
+                            <div class="modal-body text-start">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p class="field-name">Created Date</p>
+                                        <p class="field">{{ task.createdDate|date:'d/m/Y | h:i A' }}</p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p class="field-name">Due Date</p>
+                                        <p class="field">{{ task.dueDate|date:'d/m/Y | h:i A' }}</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p class="field-name">Category</p>
+                                        <p class="field">{{ task.category }}</p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p class="field-name">Status</p>
+                                        <p class="field">{{ task.status }}</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <p class="field-name">Description</p>
+                                        <p class="field word-wrap">{{ task.description|linebreaksbr|safe }}</p>
+                                    </div>
+                                </div>                                
+                            </div>
                         </div>
-                    </td>
-                </tr>
-                {% endfor %}
+                    </div>
+                </div>                
+            {% endfor %}
             </tbody>
-        </table>
+        </table> 
         <div class="text-center mt-3">
             <ul class="pagination">
                 {% if tasks.has_previous %}
@@ -157,6 +194,8 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     if (performance.navigation.type === 1) {
         if (document.getElementById('searchInput').value.trim() !== '') {
@@ -167,8 +206,6 @@
             window.location.href = '{% url 'running_tasks' %}';
         }
     }
-</script>
-<script>
     $(document).ready(function () {
         $('a.page-link').on('click', function (e) {
             e.preventDefault();
@@ -178,6 +215,25 @@
             setTimeout(function () {
                 window.location.href = '?page=' + targetPage;
             }, 0);
+        });
+    });
+    
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $(".task-row").click(function(e) {
+            e.preventDefault();
+            $(".modal").modal("hide");
+            var modalId = $(this).attr("data-target");
+            $(modalId).modal("show");
+        });
+        $(".btn-warning, .btn-edit, .btn-danger, .btn-success").click(function(e) {
+            e.stopPropagation();
+        });
+        $(".modal .close").click(function() {
+            $(this).closest(".modal").modal("hide");
         });
     });
 </script>
